# search_logs

./: .env.example-app  .env.example-postgresql-docker  Dockerfile  README.md  build_logs.txt  docker-compose.yaml  pyproject.toml  requirements.txt
src/: config.py  database.py  main.py
