[tool.poetry]
name = "search-logs"
version = "0.1.0"
description = ""
authors = ["oleg.korshunov"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.2"
fastapi = "^0.115.5"
pydantic-settings = "^2.6.1"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
uvicorn = "^0.32.0"
python-multipart = "^0.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
